[gd_scene load_steps=4 format=3 uid="uid://b8orki06k0nqr"]

[ext_resource type="PackedScene" uid="uid://golqkkh4yjrg" path="res://Scenes/Enemy/enemyBase.tscn" id="1_5nmmk"]
[ext_resource type="Script" path="res://Scenes/Enemy/shooterBase.gd" id="2_w40i6"]
[ext_resource type="Texture2D" uid="uid://1f1sitfu58eh" path="res://Sprites/temp_takeover_particle.png" id="3_yikph"]

[node name="shooterBase" instance=ExtResource("1_5nmmk")]
script = ExtResource("2_w40i6")
hover_distance = 600

[node name="Icon" parent="." index="3"]
texture = ExtResource("3_yikph")

[node name="HoverTime" type="Timer" parent="." index="5"]
wait_time = 2.0
one_shot = true

[node name="PickPoint" type="Timer" parent="." index="6"]
wait_time = 0.2

[connection signal="timeout" from="PickPoint" to="." method="_on_pick_point_timeout"]
